Adcionando token de autenticacao

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
