--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
