--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
